Configure flake8; add vim submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,15 @@
 [submodule "_vim/bundle/ctrlp"]
 	path = _vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "_vim/bundle/Vimchant"]
+	path = _vim/bundle/Vimchant
+	url = https://github.com/vim-scripts/Vimchant.git
+[submodule "_vim/bundle/vim-latex"]
+	path = _vim/bundle/vim-latex
+	url = https://github.com/vim-latex/vim-latex.git
+[submodule "_vim/bundle/jedi-vim"]
+	path = _vim/bundle/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim.git
+[submodule "_vim/bundle/syntastic"]
+	path = _vim/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
