--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "_vim/bundle/syntastic"]
 	path = _vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "_vim/bundle/vim-gitgutter"]
+	path = _vim/bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
