--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "_vim/bundle/vim-airline"]
 	path = _vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline.git
+[submodule "_vim/bundle/ag.vim"]
+	path = _vim/bundle/ag.vim
+	url = https://github.com/rking/ag.vim.git
