--- a/_eslintrc.yml
+++ b/_eslintrc.yml
@@ -14,7 +14,7 @@ rules:
 env:
   browser: true
 globals:
-    angular: 1
+    angular: false
 extends: 'eslint:recommended'
 plugins:
     - angular
