--- a/.gitmodules
+++ b/.gitmodules
@@ -106,3 +106,6 @@
 [submodule "_vim/bundle/vim-jade"]
 	path = _vim/bundle/vim-jade
 	url = https://github.com/digitaltoad/vim-jade.git
+[submodule "_vim/bundle/vim-airline-themes"]
+	path = _vim/bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
