--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "_vim/bundle/vim-airline-themes"]
 	path = _vim/bundle/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "_vim/bundle/delimitMate"]
+	path = _vim/bundle/delimitMate
+	url = https://github.com/Raimondi/delimitMate.git
