--- a/.gitmodules
+++ b/.gitmodules
@@ -51,7 +51,7 @@
 	url = https://github.com/kchmck/vim-coffee-script.git
 [submodule "_vim/bundle/ctrlp"]
 	path = _vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim.git
 [submodule "_vim/bundle/Vimchant"]
 	path = _vim/bundle/Vimchant
 	url = https://github.com/vim-scripts/Vimchant.git
