--- a/_eslintrc.yml
+++ b/_eslintrc.yml
@@ -3,6 +3,9 @@ rules:
     - 2
     - 4
     - SwitchCase: 1
+      MemberExpression: 0
+      FunctionDeclaration:
+          parameters: 2
   quotes:
     - 2
     - single
