--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "_vim/bundle/vim-localvimrc"]
 	path = _vim/bundle/vim-localvimrc
 	url = git@github.com:embear/vim-localvimrc.git
+[submodule "_vim/bundle/tern_for_vim"]
+	path = _vim/bundle/tern_for_vim
+	url = git@github.com:ternjs/tern_for_vim.git
