--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,6 @@
 [submodule "_vim/bundle/vim-rdf"]
 	path = _vim/bundle/vim-rdf
 	url = git@github.com:niklasl/vim-rdf.git
+[submodule "_vim/bundle/YouCompleteMe"]
+	path = _vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
