--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "_vim/bundle/editorconfig-vim"]
 	path = _vim/bundle/editorconfig-vim
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "_vim/bundle/vim-python-pep8-indent"]
+	path = _vim/bundle/vim-python-pep8-indent
+	url = git@github.com:Vimjas/vim-python-pep8-indent.git
