--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,9 @@
 [submodule "_vim/bundle/vim-python-pep8-indent"]
 	path = _vim/bundle/vim-python-pep8-indent
 	url = git@github.com:Vimjas/vim-python-pep8-indent.git
+[submodule "_vim/bundle/vim-abolish"]
+	path = _vim/bundle/vim-abolish
+	url = git://github.com/tpope/vim-abolish.git
+[submodule "_vim/bundle/vim-repeat"]
+	path = _vim/bundle/vim-repeat
+	url = git://github.com/tpope/vim-repeat.git
